@@ -1,5 +1,6 @@
 Changelog for Hoogle
 
+    #219, treat the query "a->b" the same as "a -> b"
     #215, if a specified module/package is missing, give no results
     #220, start on port 8080 by default
     Rely on the fact ghc API is now on Hackage
